--- a/index.html
+++ b/index.html
@@ -2,15 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web4Factory</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Web4Factory - Coming Soon</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      text-align: center;
+    }
+    header {
+      background-color: #222;
+      color: #fff;
+      padding: 1rem 0;
+    }
+    main {
+      flex: 1;
+      padding: 3rem 1rem;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      color: #333;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #666;
+    }
+    .btn {
+      margin-top: 2rem;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      background-color: #005bbb;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+    .btn:hover {
+      background-color: #004799;
+    }
+    footer {
+      background: #222;
+      color: #fff;
+      padding: 1rem 0;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <img src="logo.png" alt="Web4Factory Logo" class="logo">
-    <h1>Welcome to Web4Factory</h1>
-    <p>Your digital factory for modern web solutions.</p>
-  </div>
+
+  <header>
+    <h2>Web4Factory</h2>
+  </header>
+
+  <main>
+    <h1>Coming Soon!</h1>
+    <p>We're working hard to launch our amazing new site. Stay tuned.</p>
+    <a href="#" class="btn">Notify Me</a>
+  </main>
+
+  <footer>
+    &copy; 2025 Web4Factory. All rights reserved.
+  </footer>
+
 </body>
 </html>
